--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,8 @@ jobs:
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
+          echo "----------------- Inspect ------------------"
+          docker manifest inspect ${{ env.REGISTRY_IMAGE }}:main
       -
         name: Upload digest
         uses: actions/upload-artifact@v4
