--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ghcr.io
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
@@ -101,6 +102,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: ghcr.io
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
       -
