--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - "main"
 
 env:
-  REGISTRY_IMAGE: ghcr.io/ras-devops/novu/multiarchtest
+  REGISTRY_IMAGE: ghcr.io/ras-devops/multiarchtest
 
 jobs:
   build:
@@ -67,7 +67,7 @@ jobs:
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
           echo "----------------- Inspect ------------------"
-          docker manifest inspect ${{ env.REGISTRY_IMAGE }}:main
+          docker manifest inspect ${{ env.REGISTRY_IMAGE }} || true
       -
         name: Upload digest
         uses: actions/upload-artifact@v4
